--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
 </body>
 
