--- a/index.html
+++ b/index.html
@@ -16,7 +16,62 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="header">
+                    <h1><strong>Caltrain™ Trip Planner</strong><br>
+                    <img src="assets/images/CaltrainLogo.jpg" alt="Caltrain™"></h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <br>
+                <!-- Well section to hold Current Train Schedule -->
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
+                    </div>
+                    <!-- Append train schedules here -->
+                    <div class="panel-body" id="well-section"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <br>
+                <div class="panel panel-primary">
+                    <!-- Form area to add trains -->
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><strong>Add Train</strong></h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="search">Train Name:</label>
+                                <input type="text" class="form-control" id="search-term">
+                            </div>
+                            <div class="form-group">
+                                <label for="destination">Destination:</label>
+                                <input type="text" class="form-control" id="destination">
+                            </div>
+                            <div class="form-group">
+                                <label for="time">First Train Time (HH:mm - military time):</label>
+                                <input type="text" class="form-control" id="train-time">
+                            </div>
+                            <div class="form-group">
+                                <label for="frequency">Frequency (min):</label>
+                                <input type="text" class="form-control" id="frequency">
+                            </div>
+                            <button type="submit" class="btn btn-default" id="submit">Submit</button>
+                            <button type="button" class="btn btn-default" id="clear">Clear Added Trains</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
 </body>
