add source pathways for images in comments; move caltrain logo to left of header text

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="header">
-                    <h1><strong>Caltrain™ Trip Planner</strong><br>
-                    <img src="assets/images/CaltrainLogo.jpg" alt="Caltrain™"></h1>
+                    <h1>
+                        <!-- Source: http://www.caltrain.com/SharedSites/3/templates/images/logo.jpg -->
+                        <img src="assets/images/CaltrainLogo.jpg" alt="Caltrain™">
+                        <strong>Caltrain™ Trip Planner</strong>
+                    </h1>
                 </div>
             </div>
         </div>
