--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@
                         <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
                     </div>
                     <!-- Append train schedules here -->
-                    <div class="panel-body" id="well-section"></div>
+                    <div class="panel-body" id="well-section">
+                        <table class="table table-sm table-hover" id='train-table'>
+                            <thead>
+                                <tr>
+                                    <th scope="col"><strong>Train Name</strong></th>
+                                    <th scope="col"><strong>Destination</strong></th>
+                                    <th scope="col"><strong>Frequency (min)</strong></th>
+                                    <th scope="col"><strong>Next Arrival</strong></th>
+                                    <th scope="col"><strong>Minutes Away</strong></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
