--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 </head>
 
 <body>
@@ -67,7 +68,7 @@
                         <form role="form">
                             <div class="form-group">
                                 <label for="search">Train Name:</label>
-                                <input type="text" class="form-control" id="search-term">
+                                <input type="text" class="form-control" id="train-name">
                             </div>
                             <div class="form-group">
                                 <label for="destination">Destination:</label>
@@ -81,8 +82,8 @@
                                 <label for="frequency">Frequency (min):</label>
                                 <input type="text" class="form-control" id="frequency">
                             </div>
-                            <button type="submit" class="btn btn-default" id="submit">Submit</button>
-                            <button type="button" class="btn btn-default" id="clear">Clear Added Trains</button>
+                            <button type="submit" class="btn btn-default" id="submit-button">Submit</button>
+                            <button type="button" class="btn btn-default" id="clear-button">Clear Added Trains</button>
                         </form>
                     </div>
                 </div>
@@ -90,7 +91,7 @@
         </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
-    <script src="assets/javascript/app.js" type="text/javascript"></script>
+    <script src="assets/javascript/logic.js" type="text/javascript"></script>
 </body>
 
 </html>
