--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                                     <th scope="col"><strong>Frequency (min)</strong></th>
                                     <th scope="col"><strong>Next Arrival</strong></th>
                                     <th scope="col"><strong>Minutes Away</strong></th>
+                                    <th scope="col"><strong>Remove Train Line</strong></th>
                                 </tr>
                             </thead>
                             <tbody>
